@@ -157,6 +157,21 @@ gap> NumericalSemigroup("propmodular",67,98,1);
                 </ManSection>
 
 
+<ManSection>
+    <Func Name="NumericalSemigroupByAffineMap" Arg="a,b,c"/>
+    <Description>
+        Given three nonnegative integers <A>a</A>, <A>b</A> and <A>c</A>, with <M>a,c>0</M> and <M>\gcd(b,c)=1</M>,
+        this function returns the least (with restpect to set order inclusion) numerical semigroup containing <A>c</A> and closed under the map <M>x\mapsto ax+b</M>. The procedure is explained in <Cite Key="Ugolini"></Cite>.
+        <Example><![CDATA[
+gap> s:=NumericalSemigroupByAffineMap(3,1,3);
+<Numerical semigroup with 3 generators>
+gap> SmallElements(s);
+[ 0, 3, 6, 9, 10, 12, 13, 15, 16, 18 ]
+]]></Example>
+    </Description>
+</ManSection>
+
+
 
                 <ManSection>
                     <Func Name="NumericalSemigroupByGenerators" Arg="List"/>
