@@ -466,7 +466,6 @@ MRREVIEWER = {Attila Nagy},
 	year= "2014"
 }
 
-
 @book{Z86,
 	author={Zariski, O.},
 	title={Le probl\`eme des modules pour les courbes planes},
@@ -953,4 +952,12 @@ MRREVIEWER = {Andreas Reinhart},
 MRREVIEWER = {Giancarlo Rinaldo},
        DOI = {10.1016/j.jsc.2007.06.002},
        URL = {http://dx.doi.org/10.1016/j.jsc.2007.06.002},
+}
+
+@article{Ugolini,
+author = {Ugolini, Simone},
+title = {On numerical semigroups closed with respect to the action of affine maps},
+journal= "arXiv",
+volume= "1505.06580",
+year= "2016"
 }
